# galaxy-bz

./: .bazelrc  .gitignore  Cargo.toml  WORKSPACE.bazel
services/project/helloworld/: BUILD.bazel  Cargo.toml
services/project/helloworld/src/: main.rs
shared/sharedlib/: BUILD.bazel  Cargo.toml
